--- a/demo2/demo2.css
+++ b/demo2/demo2.css
@@ -3,6 +3,12 @@ details {
   margin-bottom: 16px;
 }
 
+@media (max-width: 750px) {
+  details {
+    width: 100%;
+  }
+}
+
 summary {
   cursor: pointer;
   /* display: list-item;以外を指定してデフォルトの三角形アイコンを消します */
@@ -57,7 +63,7 @@ details[open] .icon {
 
 
 /* --------summaryタグの疑似要素でアイコンを作る場合-------- */
-.wrapper-pseudoElementsIcon summary::after {
+.wrapper_pseudoElementsIcon summary::after {
   content: "";
   display: block;
   width: 25px;
@@ -105,28 +111,32 @@ details[open] summary::after {
 }
 
 /* --------アコーディオンの中身のスタイル-------- */
-.accordion-content {
+.content {
   background-color: #f0f2ff;
   padding: 24px 48px;
 }
 
-p {
+.content_text {
+  line-height: 1.8;
+}
+
+.content_text__mb16 {
   margin-bottom: 16px;
 }
 
 
 /* --------レイアウト用-------- */
-h1 {
-  font-size: 24px;
-}
-
 .wrapper {
   display: flex;
   gap: 24px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 750px) {
   .wrapper {
     flex-direction: column;
   }
+}
+
+.wrapper_title {
+  font-size: 22px;
 }
