文言・html・cssの修正

--- a/base.css
+++ b/base.css
@@ -51,3 +51,10 @@ footer {
 .navigation_currentPage {
   color: #222;
 }
+
+code {
+  font-family: courier, monospace;
+  background-color: #d4e0ff;
+  border-radius: 3px;
+  padding: 0 3px;
+}
