--- a/demo2/style.css
+++ b/demo2/style.css
@@ -1,13 +1,3 @@
-details {
-  width: 500px;
-}
-
-@media (max-width: 750px) {
-  details {
-    width: 100%;
-  }
-}
-
 summary {
   cursor: pointer;
   /* display: list-item;以外を指定してデフォルトの三角形アイコンを消します */
@@ -126,6 +116,7 @@ details[open] summary::after {
 .wrapper {
   display: flex;
   gap: 24px;
+  margin: 0 auto;
 }
 
 @media (max-width: 1070px) {
@@ -135,9 +126,16 @@ details[open] summary::after {
 }
 
 .wrapper_normalIcon, .wrapper_pseudoElementsIcon {
+  width: 700px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media (max-width: 760px) {
+  .wrapper_normalIcon, .wrapper_pseudoElementsIcon {
+    width: 100%;
+  }
 }
 
 .wrapper_title {
