--- a/demo3-1/style.css
+++ b/demo3-1/style.css
@@ -1,13 +1,3 @@
-details {
-  width: 500px;
-}
-
-@media (max-width: 750px) {
-  details {
-    width: 100%;
-  }
-}
-
 summary {
   cursor: pointer;
   /* display: list-item;以外を指定してデフォルトの三角形アイコンを消します */
@@ -22,7 +12,7 @@ summary {
 }
 
 summary::-webkit-details-marker {
-  /* Safariで表示されるデフォルトの三角形アイコンを消す */
+  /* Safariで表示されるデフォルトの三角形アイコンを消します */
   display: none;
 }
 
@@ -83,7 +73,15 @@ details.is-opened .icon {
 
 /* --------レイアウト用のスタイル-------- */
 .wrapper {
+  width: 700px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media (max-width: 760px) {
+  .wrapper {
+    width: 100%;
+  }
 }
