--- a/demo2/style.css
+++ b/demo2/style.css
@@ -1,6 +1,15 @@
 summary {
-  cursor: pointer;
   /* display: list-item;以外を指定してデフォルトの三角形アイコンを消します */
+  display: block;
+}
+
+summary::-webkit-details-marker {
+  /* Safariで表示されるデフォルトの三角形アイコンを消します */
+  display: none;
+}
+
+.summary_inner{
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,11 +18,6 @@ summary {
   border: 1px solid #d2beff;
   font-weight: bold;
   color: #002255;
-}
-
-summary::-webkit-details-marker {
-  /* Safariで表示されるデフォルトの三角形アイコンを消します */
-  display: none;
 }
 
 /* --------アイコンを作ります-------- */
@@ -54,7 +58,7 @@ details[open] .icon {
 }
 
 /* --------summaryタグの疑似要素でアイコンを作る場合-------- */
-.wrapper_pseudoElementsIcon summary::after {
+.wrapper_pseudoElementsIcon .summary_inner::after {
   content: "";
   display: block;
   width: 25px;
@@ -81,7 +85,7 @@ details[open] .icon {
 }
 
 /* アコーディオンが開いた時にアイコンをアニメーションさせます */
-details[open] summary::after {
+details[open] .summary_inner::after {
   animation: 0.4s open-animation forwards;
 }
 
@@ -107,21 +111,37 @@ details[open] summary::after {
 /* --------レイアウト用のスタイル-------- */
 .wrapper {
   display: flex;
-  gap: 24px;
   margin: 0 auto;
 }
 
-@media (max-width: 1070px) {
-  .wrapper {
-    flex-direction: column;
-  }
+.wrapper details {
+  margin-bottom: 16px;
+}
+
+.wrapper details:last-child {
+  margin-bottom: 0;
 }
 
 .wrapper_normalIcon, .wrapper_pseudoElementsIcon {
   width: 700px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+}
+
+@media (min-width: 1071px) {
+  .wrapper_normalIcon {
+    margin-right: 24px;
+  }
+}
+
+@media (max-width: 1070px) {
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .wrapper_normalIcon {
+    margin-bottom: 24px;
+  }
 }
 
 @media (max-width: 760px) {
