--- a/demo3-1/style.css
+++ b/demo3-1/style.css
@@ -1,6 +1,15 @@
 summary {
-  cursor: pointer;
   /* display: list-item;以外を指定してデフォルトの三角形アイコンを消します */
+  display: block;
+}
+
+summary::-webkit-details-marker {
+  /* Safariで表示されるデフォルトの三角形アイコンを消します */
+  display: none;
+}
+
+.summary_inner{
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,11 +18,6 @@ summary {
   border: 1px solid #d2beff;
   font-weight: bold;
   color: #002255;
-}
-
-summary::-webkit-details-marker {
-  /* Safariで表示されるデフォルトの三角形アイコンを消します */
-  display: none;
 }
 
 .icon {
@@ -77,7 +81,14 @@ details.is-opened .icon {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+}
+
+.wrapper details {
+  margin-bottom: 16px;
+}
+
+.wrapper details:last-child {
+  margin-bottom: 0;
 }
 
 @media (max-width: 760px) {
