--- a/demo3-0/style.css
+++ b/demo3-0/style.css
@@ -45,6 +45,11 @@ summary {
   font-weight: bold;
   color: #002255;
   cursor: pointer;
+
+  /* Safariで表示されるデフォルトの三角形アイコンを消します */
+  &::-webkit-details-marker {
+    display: none;
+  }
 }
 
 /* --------アイコンを作ります-------- */
