--- a/demo2/style.css
+++ b/demo2/style.css
@@ -8,13 +8,11 @@ summary {
   border: 1px solid #d2beff;
   font-weight: bold;
   color: #002255;
-
   /* Safariで表示されるデフォルトの三角形アイコンを消します */
   &::-webkit-details-marker {
     display: none;
   }
 }
-
 /* --------アイコンを作ります-------- */
 .icon {
   display: block;
@@ -23,8 +21,7 @@ summary {
   transform-origin: center 43%;
   transition: transform 0.4s;
   /* アイコンのバーのスタイル */
-  &::before,
-  &::after {
+  &::before, &::after {
     content: "";
     position: absolute;
     display: block;
@@ -41,16 +38,12 @@ summary {
     transform: rotate(-45deg);
   }
 }
-
 /* アコーディオンが開いた時のスタイル */
 details[open] .icon {
   transform: rotate(180deg);
 }
-
-/* --------
-  summaryタグの疑似要素でアイコンを作る場合
-  （注意）疑似要素のトランジションはSafari 17.4以前でうまくいかない
--------- */
+/* summaryタグの疑似要素でアイコンを作るパターン
+（注意）疑似要素のトランジションはSafari 17.4以前でうまくいかない */
 .pseudoElement {
   summary::after {
     content: "";
@@ -65,7 +58,6 @@ details[open] .icon {
     transform-origin: center 43%;
     transition: transform 0.4s;
   }
-
   details[open] summary::after {
     transform: rotate(180deg);
   }
